RESOLVED FIXED81083
[Chromium] REGRESSION(r110596) CCQuadCullerTest.verifyCullChildLinesUpTopLeft fails on Windows
https://bugs.webkit.org/show_bug.cgi?id=81083
Summary [Chromium] REGRESSION(r110596) CCQuadCullerTest.verifyCullChildLinesUpTopLeft...
Hajime Morrita
Reported 2012-03-13 23:56:17 PDT
The unit test fails since http://trac.webkit.org/changeset/110596 http://chromegw.corp.google.com/i/chromium.webkit/builders/Webkit%20Win%20%28dbg%29%281%29/builds/10820 --- CCQuadCullerTest.verifyCullChildLinesUpTopLeft: Did not complete. ---
Attachments
Patch (3.64 KB, patch)
2012-03-14 08:01 PDT, Dana Jansens
no flags
Patch (4.67 KB, patch)
2012-03-14 10:18 PDT, Dana Jansens
no flags
Hajime Morrita
Comment 1 2012-03-14 00:03:52 PDT
Dana Jansens
Comment 2 2012-03-14 08:01:06 PDT
Adrienne Walker
Comment 3 2012-03-14 09:34:12 PDT
Comment on attachment 131847 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=131847&action=review > Source/WebKit/chromium/tests/CCQuadCullerTest.cpp:48 > + m_stack.last().surface = 0; Can you enforce that StackObject doesn't leave surface uninitialized so this doesn't happen again? Maybe add a default constructor that initializes to null and some other constructor that initializes to some other surface?
Dana Jansens
Comment 4 2012-03-14 10:18:37 PDT
(In reply to comment #3) > (From update of attachment 131847 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=131847&action=review > > > Source/WebKit/chromium/tests/CCQuadCullerTest.cpp:48 > > + m_stack.last().surface = 0; > > Can you enforce that StackObject doesn't leave surface uninitialized so this doesn't happen again? Maybe add a default constructor that initializes to null and some other constructor that initializes to some other surface? Yup! Done.
Dana Jansens
Comment 5 2012-03-14 10:18:54 PDT
Adrienne Walker
Comment 6 2012-03-14 10:20:16 PDT
Comment on attachment 131874 [details] Patch Thanks! R=me
WebKit Review Bot
Comment 7 2012-03-15 13:13:07 PDT
Comment on attachment 131874 [details] Patch Clearing flags on attachment: 131874 Committed r110878: <http://trac.webkit.org/changeset/110878>
WebKit Review Bot
Comment 8 2012-03-15 13:13:11 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.