[Chromium] REGRESSION(r110596) CCQuadCullerTest.verifyCullChildLinesUpTopLeft fails on Windows https://bugs.webkit.org/show_bug.cgi?id=81083

Patch by Dana Jansens <danakj@chromium.org> on 2012-03-15
Reviewed by Adrienne Walker.

Source/WebCore:

The surface pointer on the occlusion tracker stack is uninitialized, and
can be non-null, but the layer's target surface is null, causing asserts
to fail. Fixes the TestCCOcclusionTrackerImpl to initialize the stack's
surface to be null.

* platform/graphics/chromium/cc/CCOcclusionTracker.cpp:
(WebCore::::enterTargetRenderSurface):
(WebCore::::unoccludedContentRect):
* platform/graphics/chromium/cc/CCOcclusionTracker.h:
(WebCore::CCOcclusionTrackerBase::StackObject::StackObject):

Source/WebKit/chromium:

* tests/CCQuadCullerTest.cpp:
(WebCore::TEST):

Canonical link: https://commits.webkit.org/98440@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110878 268f45cc-cd09-0410-ab3c-d52691b4dbfc